--- a/index.html
+++ b/index.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-	<title>Why?</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<meta charset="UTF-8">
-	<meta name="keywords" content="ManishShah120,Manish Shah,Manish Kumar Shah">
-	<meta name="description" content="An Open Source Enthusiast, currently pursuing B.Tech in CSE discipline. My field of interest is Networking, Web Development, and DevOps. Looking for an organization where I can utilize the knowledge I have gathered or acquired till now and further enhance my skill-sets in the IT field. I am the type of guy who always learns by implementing, always having a strong desire to learn. I spend most of my time contributing to Open-Source Projects and softwares. When I am not coding, I BLOG">
-	<link rel="icon" href="assets/images/emoji_u1f914.svg">
-	<link rel="stylesheet" href="assets/css/style.css">
-	<!-- Matomo -->
-	<script type="text/javascript">
-	  var _paq = window._paq = window._paq || [];
-	  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-	  _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
-	  _paq.push(["setCookieDomain", "*.manishshah120.github.io"]);
-	  _paq.push(["setDomains", ["*.manishshah120.github.io"]]);
-	  _paq.push(['trackPageView']);
-	  _paq.push(['enableLinkTracking']);
-	  (function() {
-	    var u="https://manishshah120.matomo.cloud/";
-	    _paq.push(['setTrackerUrl', u+'matomo.php']);
-	    _paq.push(['setSiteId', '1']);
-	    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-	    g.type='text/javascript'; g.async=true; g.src='//cdn.matomo.cloud/manishshah120.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
-	  })();
-	</script>
-	<noscript><p><img src="https://manishshah120.matomo.cloud/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
-	<!-- End Matomo Code -->
-</head>
-
-<body>
-	<canvas id="c"></canvas>
-	<div class="socialicon">
-		<ul class="social-media-icons">
-			<li> <a href="https://github.com/ManishShah120" target="_blank"><i class="fa fa-github"></i></a> </li>
-			<li> <a href="https://www.linkedin.com/in/manishshah120/" target="_blank"><i class="fa fa-linkedin"></i></a> </li>
-			<li> <a href="https://twitter.com/ManishShah120" target="_blank"><i class="fa fa-twitter"></i></a> </li>
-			<li> <a href="mailto: mkshah141@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a> </li>
-			<li> <a href="https://www.kaggle.com/manishshah120" target="_blank"><i class="fa fa-kaggle">k</i></a> </li>
-			<li> <a href="https://manishshah120.medium.com/" target="_blank"><i class="fa fa-medium"></i></a> </li>
-		</ul>
-	</div>
-	<script src="assets/js/matrix.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><title>Why?</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><meta charset="UTF-8"><meta name="keywords" content="ManishShah120,Manish Shah,Manish Kumar Shah"><meta name="description" content="An Open Source Enthusiast, currently pursuing B.Tech in CSE discipline. My field of interest is Networking, Web Development, and DevOps. Looking for an organization where I can utilize the knowledge I have gathered or acquired till now and further enhance my skill-sets in the IT field. I am the type of guy who always learns by implementing, always having a strong desire to learn. I spend most of my time contributing to Open-Source Projects and softwares. When I am not coding, I BLOG"><link rel="icon" href="assets/images/emoji_u1f914.svg"><link rel="stylesheet" href="assets/css/style.css"> <script type="text/javascript">var _paq=window._paq=window._paq||[];_paq.push(["setDocumentTitle",document.domain+"/"+document.title]);_paq.push(["setCookieDomain","*.manishshah120.github.io"]);_paq.push(["setDomains",["*.manishshah120.github.io"]]);_paq.push(['trackPageView']);_paq.push(['enableLinkTracking']);(function(){var u="https://manishshah120.matomo.cloud/";_paq.push(['setTrackerUrl',u+'matomo.php']);_paq.push(['setSiteId','1']);var d=document,g=d.createElement('script'),s=d.getElementsByTagName('script')[0];g.type='text/javascript';g.async=true;g.src='//cdn.matomo.cloud/manishshah120.matomo.cloud/matomo.js';s.parentNode.insertBefore(g,s);})();</script> <noscript><p><img src="https://manishshah120.matomo.cloud/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript></head><body> <canvas id="c"></canvas><div class="socialicon"><ul class="social-media-icons"><li> <a href="https://github.com/ManishShah120" target="_blank"><i class="fa fa-github"></i></a></li><li> <a href="https://www.linkedin.com/in/manishshah120/" target="_blank"><i class="fa fa-linkedin"></i></a></li><li> <a href="https://twitter.com/ManishShah120" target="_blank"><i class="fa fa-twitter"></i></a></li><li> <a href="mailto: mkshah141@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li><li> <a href="https://www.kaggle.com/manishshah120" target="_blank"><i class="fa fa-kaggle">k</i></a></li><li> <a href="https://manishshah120.medium.com/" target="_blank"><i class="fa fa-medium"></i></a></li></ul></div> <script src="assets/js/matrix.js"></script> </body></html>
