Add Simple Analytics

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 		</ul>
 	</div>
 	<script src="assets/js/matrix.js"></script>
+	<!-- Simple Analytics Script Start -->
+	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+	<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+	<!-- Simple Analytics Script End -->
 </body>
 
 </html>
