[change] Replaced matrix js with particle js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-	<canvas id="c"></canvas>
+	<div class="header">
+		<div id="particles-js"></div>
+	</div>
 	<div class="socialicon">
 		<ul class="social-media-icons">
 			<li> <a href="https://github.com/ManishShah120" target="_blank"><i class="fa fa-github"></i></a> </li>
@@ -23,11 +25,11 @@
 			<li> <a href="https://manishshah120.medium.com/" target="_blank"><i class="fa fa-medium"></i></a> </li>
 		</ul>
 	</div>
-	<script src="assets/js/matrix.js"></script>
+	<script src="assets/js/particles.js"></script>
+	<script src="assets/js/app.js"></script>
 	<!-- Simple Analytics Script Start -->
 	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 	<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 	<!-- Simple Analytics Script End -->
 </body>
-
 </html>
